--- a/Front/src/components/styles/Grid.css
+++ b/Front/src/components/styles/Grid.css
@@ -129,7 +129,7 @@
 }
 .centre {
 	grid-area: 5 / 5 / 6 / 6;
-	border: solid 1px black;
+	border: solid 1px red;
 }
 .div42 {
 	grid-area: 5 / 6 / 6 / 7;
