--- a/Front/src/components/styles/Grid.css
+++ b/Front/src/components/styles/Grid.css
@@ -257,7 +257,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 2em;
+	font-size: 1.25em;
 	border-radius: 20px;
 	border: solid 2px black;
+	font-family: 'Pokemon';
 }
