--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -7,6 +7,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 */
+
+@font-face {
+	font-family: 'Pokemon';
+	src: local('Pokemon'),
+		url('./components/styles/PokemonClassic.ttf') format('truetype');
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
