--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,179 +1,206 @@
-.App {
+.tonecran {
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
-	text-align: center;
-	width: 1550px;
-}
-
-.coteacote {
-	display: flex;
+	align-items: center;
 }
 
 .titre {
-	font-size: 2.5em;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1em;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	font-family: 'Pokemon';
 }
-.top {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	background-color: gray;
-	height: 150px;
-	width: 976px;
-	border-radius: 40px 40px 0px 0px;
-}
-.ontop {
-	position: relative;
-	border-radius: 20px 20px 0px 0px;
-	background-color: rgb(25, 25, 25);
-	height: 50px;
-	width: 680px;
-	z-index: 1;
-}
-.center {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-.grille {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.onleft {
-	display: flex;
-	justify-content: flex-end;
-	background-color: gray;
-	height: 580px;
-	width: 198px;
-}
-.onleftop {
-	display: flex;
-	background-color: rgb(25, 25, 25);
-	height: 580px;
-	width: 50px;
-}
-.onright {
-	background-color: gray;
-	justify-content: flex-start;
-	height: 580px;
-	width: 198px;
-}
-.onrightop {
-	display: flex;
-	background-color: rgb(25, 25, 25);
-	height: 580px;
-	width: 50px;
-}
-.foot {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	background-color: gray;
-	height: 150px;
-	width: 976px;
-	border-radius: 0px 0px 40px 40px;
-}
-.onfoot {
-	position: relative;
-	border-radius: 0px 0px 20px 20px;
-	background-color: rgb(25, 25, 25);
-	height: 50px;
-	width: 680px;
 
-	z-index: 1;
-}
-input {
-	z-index: -5;
-}
-
-.explications {
-	display: grid;
-	justify-content: center;
-	align-content: center;
-	grid-template-columns: repeat(7, 75px);
-	grid-template-rows: repeat(4, 75px);
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
-	margin-left: 30px;
-}
-
-.touchehaut {
-	grid-area: 1 / 2 / 2 / 3;
-	background-color: rgb(41, 41, 41);
-	border-radius: 10px 10px 0px 0px;
-	color: white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.touchegauche {
-	grid-area: 2 / 1 / 3 / 2;
-	background-color: rgb(41, 41, 41);
-	border-radius: 10px 0px 0px 10px;
-	color: white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.manette {
-	grid-area: 2 / 2 / 3 / 3;
-	background-color: rgb(41, 41, 41);
-}
-.touchedroite {
-	grid-area: 2 / 3 / 3 / 4;
-	background-color: rgb(41, 41, 41);
-	border-radius: 0px 10px 10px 0px;
-	color: white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.touchebas {
-	grid-area: 3 / 2 / 4 / 3;
-	background-color: rgb(41, 41, 41);
-	border-radius: 0px 0px 10px 10px;
-	color: white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.enter {
-	grid-area: 2 / 6 / 3 / 7;
-	border-radius: 40px 40px 40px 40px;
-	background-color: rgb(189, 61, 157);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: white;
-}
-.fleches {
-	grid-area: 4 / 1 / 5 / 4;
-	margin-top: 20px;
-	font-size: 1.25em;
-}
-.enterplease {
-	grid-area: 4 / 5 / 5 / 8;
-	margin-top: 20px;
-	font-size: 1.25em;
-}
-
-.tonecran {
+.coteacote {
 	display: none;
 }
 
-@media screen and (max-width: 1400px) {
-	.tonecran {
+@media screen and (min-width: 926px) {
+	.App {
 		display: flex;
-		width: 100%;
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+		/*width: 926px;*/
+	}
+	.coteacote {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+	}
+	.titre {
+		font-size: 1.25em;
+		/*margin-top: 10px;*/
+		/*margin-bottom: 10px;*/
+		font-family: 'Pokemon';
+	}
+	.top {
+		display: flex;
+		justify-content: center;
+		align-items: flex-end;
+		background-color: gray;
+		height: 20px;
+		width: 332px;
+		border-radius: 20px 20px 0px 0px;
+	}
+	.ontop {
+		position: relative;
+		border-radius: 5px 5px 0px 0px;
+		background-color: rgb(25, 25, 25);
+		height: 5px;
+		width: 302px;
+		/*z-index: 1;*/
+	}
+	.center {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+	.grille {
+		display: flex;
 		justify-content: center;
 		align-items: center;
-		font-size: 1.5em;
-		margin-top: 50px;
 	}
+	.onleft {
+		display: flex;
+		justify-content: flex-end;
+		background-color: gray;
+		height: 292px;
+		width: 20px;
+	}
+	.onleftop {
+		display: flex;
+		background-color: rgb(25, 25, 25);
+		height: 292px;
+		width: 5px;
+	}
+	.onright {
+		background-color: gray;
+		justify-content: flex-start;
+		height: 292px;
+		width: 20px;
+	}
+	.onrightop {
+		display: flex;
+		background-color: rgb(25, 25, 25);
+		height: 292px;
+		width: 5px;
+	}
+	.foot {
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		background-color: gray;
+		height: 20px;
+		width: 332px;
+		border-radius: 0px 0px 40px 40px;
+	}
+	.onfoot {
+		position: relative;
+		border-radius: 0px 0px 20px 20px;
+		background-color: rgb(25, 25, 25);
+		height: 5px;
+		width: 302px;
+		z-index: 1;
+	}
+	input {
+		opacity: 0;
+	}
+	.croix {
+		display: grid;
+		grid-template-columns: repeat(3, 48px);
+		grid-template-rows: repeat(5, 48px);
+		grid-column-gap: 0px;
+		grid-row-gap: 0px;
+		margin: 20px;
+	}
+	.touchehaut {
+		grid-area: 1 / 2 / 2 / 3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 5px 5px 0px 0px;
+		color: white;
+	}
+	.touchegauche {
+		grid-area: 2 / 1 / 3 / 2;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 5px 0px 0px 5px;
+		color: white;
+	}
+	.central {
+		grid-area: 2 / 2 / 3 / 3;
+		background-color: rgba(0, 0, 0, 0.8);
+	}
+	.touchedroite {
+		grid-area: 2 / 3 / 3 / 4;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 0px 5px 5px 0px;
+		color: white;
+	}
+	.touchebas {
+		grid-area: 3 / 2 / 4 / 3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 0px 0px 5px 5px;
+		color: white;
+	}
+	.explicationfleche {
+		grid-area: 4 / 1 / 6 / 4;
+		display: flex;
+		justify-content: center;
+		width: 200px;
+		margin-top: 20px;
+	}
+	.boutons {
+		display: grid;
+		grid-template-columns: repeat(6, 48px);
+		grid-template-rows: repeat(5, 48px);
+		grid-column-gap: 0px;
+		grid-row-gap: 0px;
+	}
+	.boutonclavier {
+		/*grid-area: 2 / 2 / 3 / 3;*/
+		display: none;
+	}
+	.boutonentree {
+		grid-area: 2 / 4 / 3 / 5;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 24px 24px 24px 24px;
+		background-color: rgb(189, 61, 157);
+		color: white;
+	}
+	.txtclavier {
+		/*grid-area: 4 / 1 / 6 / 4;*/
+		display: none;
+	}
+	.txtentree {
+		grid-area: 4 / 4 / 6 / 7;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		text-align: justify;
+	}
+	.tonecran {
+		display: none;
+	}
+}
+
+@media screen and (min-width: 1920px) {
 	.App {
 		display: flex;
 		flex-direction: column;
@@ -182,13 +209,204 @@ input {
 		width: 100%;
 	}
 	.coteacote {
-		display: none;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
 	}
 	.titre {
+		display: flex;
 		font-size: 2.5em;
-		margin-top: 20px;
-		margin-bottom: 20px;
+		/*margin-top: 10px;*/
+		/*margin-bottom: 10px;*/
 		font-family: 'Pokemon';
+	}
+	.top {
+		display: flex;
 		justify-content: center;
+		align-items: flex-end;
+		background-color: gray;
+		height: 40px;
+		width: 660px;
+		border-radius: 20px 20px 0px 0px;
+	}
+	.ontop {
+		position: relative;
+		border-radius: 5px 5px 0px 0px;
+		background-color: rgb(25, 25, 25);
+		height: 20px;
+		width: 620px;
+		/*z-index: 1;*/
+	}
+	.center {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+	.grille {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	.onleft {
+		display: flex;
+		justify-content: flex-end;
+		background-color: gray;
+		height: 580px;
+		width: 40px;
+	}
+	.onleftop {
+		display: flex;
+		background-color: rgb(25, 25, 25);
+		height: 580px;
+		width: 20px;
+	}
+	.onright {
+		background-color: gray;
+		justify-content: flex-start;
+		height: 580px;
+		width: 40px;
+	}
+	.onrightop {
+		display: flex;
+		background-color: rgb(25, 25, 25);
+		height: 580px;
+		width: 20px;
+	}
+	.foot {
+		display: flex;
+		justify-content: center;
+		align-items: flex-start;
+		background-color: gray;
+		height: 40px;
+		width: 660px;
+		border-radius: 0px 0px 40px 40px;
+	}
+	.onfoot {
+		position: relative;
+		border-radius: 0px 0px 20px 20px;
+		background-color: rgb(25, 25, 25);
+		height: 20px;
+		width: 620px;
+		z-index: 1;
+	}
+	input {
+		opacity: 0;
+	}
+	.croix {
+		display: grid;
+		grid-template-columns: repeat(3, 64px);
+		grid-template-rows: repeat(5, 64px);
+		grid-column-gap: 0px;
+		grid-row-gap: 0px;
+		margin: 20px;
+	}
+	.touchehaut {
+		grid-area: 1 / 2 / 2 / 3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 20px 20px 0px 0px;
+		color: white;
+		font-size: 1.5em;
+	}
+	.touchegauche {
+		grid-area: 2 / 1 / 3 / 2;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 20px 0px 0px 20px;
+		color: white;
+		font-size: 1.5em;
+	}
+	.central {
+		grid-area: 2 / 2 / 3 / 3;
+		background-color: rgba(0, 0, 0, 0.8);
+	}
+	.touchedroite {
+		grid-area: 2 / 3 / 3 / 4;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 0px 20px 20px 0px;
+		color: white;
+		font-size: 1.5em;
+	}
+	.touchebas {
+		grid-area: 3 / 2 / 4 / 3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, 0.8);
+		border-radius: 0px 0px 20px 20px;
+		color: white;
+		font-size: 1.5em;
+	}
+	.explicationfleche {
+		grid-area: 4 / 1 / 6 / 4;
+		display: flex;
+		justify-content: center;
+		width: 200px;
+		margin-top: 20px;
+	}
+	.boutons {
+		display: grid;
+		grid-template-columns: repeat(6, 80px);
+		grid-template-rows: repeat(5, 80px);
+		grid-column-gap: 0px;
+		grid-row-gap: 0px;
+	}
+	.boutonclavier {
+		grid-area: 2 / 2 / 3 / 3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 40px 40px 40px 40px;
+		background-color: rgb(189, 61, 157);
+		color: white;
+		font-size: 2em;
+	}
+	.boutonentree {
+		grid-area: 2 / 4 / 3 / 5;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 40px 40px 40px 40px;
+		background-color: rgb(189, 61, 157);
+		color: white;
+		font-size: 2em;
+	}
+	.txtclavier {
+		grid-area: 4 / 1 / 6 / 3;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		text-align: justify;
+		font-size: 1.5em;
+	}
+	.txtentree {
+		grid-area: 4 / 4 / 6 / 6;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		text-align: justify;
+		font-size: 1.5em;
+	}
+	.tonecran {
+		display: none;
 	}
 }
+
+/*
+.boutonclavier {
+	grid-area: 2 / 2 / 3 / 3;
+	border-radius: 24px 24px 24px 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(189, 61, 157);
+	color: white;
+}
+*/
