--- a/Front/src/components/styles/GridDetail.css
+++ b/Front/src/components/styles/GridDetail.css
@@ -1,5 +1,17 @@
 .card {
-	width: 64px;
+	width: 32px;
+}
+
+@media screen and (min-width: 926px) {
+	.card {
+		width: 32px;
+	}
+}
+
+@media screen and (min-width: 1920px) {
+	.card {
+		width: 64px;
+	}
 }
 
 .card img {
