--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -14,6 +14,11 @@
 		url('./components/styles/PokemonClassic.ttf') format('truetype');
 }
 
+* {
+	margin: 0;
+	padding: 0;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
