--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -18,6 +18,29 @@
 	display: none;
 }
 
+@media (prefers-color-scheme: dark) {
+  body { 
+		background: #222; 
+		color: white; 
+	}
+	.touchebas, 
+	.touchehaut, 
+	.touchegauche, 
+	.touchedroite, 
+	.central {
+		background-color: white;
+		color: black;
+	}
+}
+
+@media (prefers-color-scheme: light) {
+  body { 
+		background: #fff; 
+		color: black; 
+	}
+}
+
+
 @media screen and (min-width: 700px) {
 	.App {
 		display: flex;
@@ -122,6 +145,7 @@
 		border-radius: 10px 10px 0px 0px;
 		color: white;
 	}
+
 	.touchegauche {
 		grid-area: 2 / 1 / 3 / 2;
 		display: flex;
@@ -153,6 +177,18 @@
 		border-radius: 0px 0px 10px 10px;
 		color: white;
 	}
+
+	@media (prefers-color-scheme: dark) {
+		.touchehaut,
+		.touchebas,
+		.touchegauche,
+		.touchedroite,
+		.central {
+			background-color: white;
+			color: black;
+		}
+	}
+
 	.explicationfleche {
 		grid-area: 4 / 1 / 6 / 4;
 		display: flex;
@@ -277,6 +313,7 @@
 }
 
 @media screen and (min-width: 1920px) {
+	
 	.App {
 		display: flex;
 		flex-direction: column;
@@ -493,16 +530,20 @@
 	.tonecran {
 		display: none;
 	}
+	@media (prefers-color-scheme: dark) {
+		.touchehaut,
+		.touchebas,
+		.touchegauche,
+		.touchedroite,
+		.central {
+			background-color: white;
+			color: black;
+		}
+		.touchehaut:hover,
+		.touchebas:hover,
+		.touchegauche:hover,
+		.touchedroite:hover {
+			background-color: rgba(255, 255, 255, 0.75);
+		}
+	}
 }
-
-/*
-.boutonclavier {
-	grid-area: 2 / 2 / 3 / 3;
-	border-radius: 24px 24px 24px 24px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: rgb(189, 61, 157);
-	color: white;
-}
-*/
