--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -18,6 +18,29 @@
 	display: none;
 }
 
+@media (prefers-color-scheme: dark) {
+  body { 
+		background: #222; 
+		color: white; 
+	}
+	.touchebas, 
+	.touchehaut, 
+	.touchegauche, 
+	.touchedroite, 
+	.central {
+		background-color: white;
+		color: black;
+	}
+}
+
+@media (prefers-color-scheme: light) {
+  body { 
+		background: #fff; 
+		color: black; 
+	}
+}
+
+
 @media screen and (min-width: 700px) {
 	.App {
 		display: flex;
@@ -121,7 +144,9 @@
 		background-color: rgba(0, 0, 0, 0.8);
 		border-radius: 10px 10px 0px 0px;
 		color: white;
+		transition: 0.5s;
 	}
+
 	.touchegauche {
 		grid-area: 2 / 1 / 3 / 2;
 		display: flex;
@@ -130,6 +155,7 @@
 		background-color: rgba(0, 0, 0, 0.8);
 		border-radius: 10px 0px 0px 10px;
 		color: white;
+		transition: 0.5s;
 	}
 	.central {
 		grid-area: 2 / 2 / 3 / 3;
@@ -143,6 +169,7 @@
 		background-color: rgba(0, 0, 0, 0.8);
 		border-radius: 0px 10px 10px 0px;
 		color: white;
+		transition: 0.5s;
 	}
 	.touchebas {
 		grid-area: 3 / 2 / 4 / 3;
@@ -152,7 +179,20 @@
 		background-color: rgba(0, 0, 0, 0.8);
 		border-radius: 0px 0px 10px 10px;
 		color: white;
+		transition: 0.5s;
 	}
+
+	@media (prefers-color-scheme: dark) {
+		.touchehaut,
+		.touchebas,
+		.touchegauche,
+		.touchedroite,
+		.central {
+			background-color: white;
+			color: black;
+		}
+	}
+
 	.explicationfleche {
 		grid-area: 4 / 1 / 6 / 4;
 		display: flex;
@@ -277,6 +317,7 @@
 }
 
 @media screen and (min-width: 1920px) {
+	
 	.App {
 		display: flex;
 		flex-direction: column;
@@ -383,6 +424,7 @@
 		border-radius: 20px 20px 0px 0px;
 		color: white;
 		font-size: 1.5em;
+		transition: 0.5s;
 	}
 	.touchehaut:hover {
 		background-color: rgba(0, 0, 0, 0.5);
@@ -396,6 +438,7 @@
 		border-radius: 20px 0px 0px 20px;
 		color: white;
 		font-size: 1.5em;
+		transition: 0.5s;
 	}
 	.touchegauche:hover {
 		background-color: rgba(0, 0, 0, 0.5);
@@ -413,6 +456,7 @@
 		border-radius: 0px 20px 20px 0px;
 		color: white;
 		font-size: 1.5em;
+		transition: 0.5s;
 	}
 	.touchedroite:hover {
 		background-color: rgba(0, 0, 0, 0.5);
@@ -426,6 +470,7 @@
 		border-radius: 0px 0px 20px 20px;
 		color: white;
 		font-size: 1.5em;
+		transition: 0.5s;
 	}
 	.touchebas:hover {
 		background-color: rgba(0, 0, 0, 0.5);
@@ -493,16 +538,20 @@
 	.tonecran {
 		display: none;
 	}
+	@media (prefers-color-scheme: dark) {
+		.touchehaut,
+		.touchebas,
+		.touchegauche,
+		.touchedroite,
+		.central {
+			background-color: white;
+			color: black;
+		}
+		.touchehaut:hover,
+		.touchebas:hover,
+		.touchegauche:hover,
+		.touchedroite:hover {
+			background-color: rgba(255, 255, 255, 0.75);
+		}
+	}
 }
-
-/*
-.boutonclavier {
-	grid-area: 2 / 2 / 3 / 3;
-	border-radius: 24px 24px 24px 24px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: rgb(189, 61, 157);
-	color: white;
-}
-*/
