--- a/src/components/styles/Grid.css
+++ b/src/components/styles/Grid.css
@@ -267,6 +267,7 @@
 .message {
 	grid-area: 7 / 1 / 10 / 10;
 	background-color: white;
+	color: black;
 	display: flex;
 	justify-content: center;
 	align-items: center;
